--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>sistema de registro de Juegos</title>
 </head>
 <body>
-    
-</body>
+    </body>
+    <script src="app.js"></script>
 </html>
