--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>correo: monicarsmirezvaldez@gmail.com</h1>
-<script src="app.js"></script>
+<p>instructora</p>
+    <script src="app.js"></script>
 </body>
 </html>
